--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-event-timeline": "^1.6.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-router-with-props": "^0.1.3",
     "react-scripts": "2.1.8",
     "react-scroll": "^1.7.11",
     "react-vertical-timeline-component": "^2.3.1",
