--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "config": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
