finished contact_info edit page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-event-timeline": "^1.6.3",
+    "react-google-autocomplete": "^1.1.0",
     "react-phone-input-2": "^2.9.4",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
