--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "config": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "material-ui": "^0.20.2",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
