--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-event-timeline": "^1.6.3",
     "react-google-autocomplete": "^1.1.0",
     "react-google-login": "^5.0.4",
+    "react-grid-gallery": "^0.5.5",
     "react-phone-input-2": "^2.9.4",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
